# overachiever

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  HLTB-plan.md  README.md  package.json  plan-to-implement-tags.md  recently_played_debug.txt  ttb_log.txt  ui_state.json
.claude/: settings.local.json
.github/: copilot-instructions.md
assets/: FONTS_README.md
crates/backend/: Cargo.toml
crates/backend/migrations/: 20241220000001_achievement_ratings.sql  20241224000001_run_history_unplayed_total.sql  (+8 more)
crates/core/: Cargo.toml
crates/desktop/: Cargo.toml  build.rs
crates/desktop/src/: cjk_font.rs  cloud_sync.rs  config.rs  db.rs  fonts.rs  icon_cache.rs  main.rs  steam_api.rs  steam_config.rs  steam_library.rs  steamspy.rs  ui.rs
crates/desktop/src/app/: mod.rs  state.rs
crates/desktop/src/app/panels/: games_table.rs  history.rs  mod.rs  top.rs
crates/desktop/src/app/panels/top/: fonts.rs  mod.rs  modals.rs  profile_menu.rs  settings.rs  toolbar.rs
crates/desktop/src/app/state/: cloud_sync.rs  mod.rs  progress.rs  sorting.rs  tags.rs  ttb.rs
crates/desktop/src/db/: achievements.rs  first_plays.rs  games.rs  history.rs  migrations.rs  mod.rs  mod_new.rs  ratings.rs  settings.rs  sync.rs  ttb.rs
crates/desktop/src/ttb/: mod.rs  scraper.rs
crates/wasm/: Cargo.toml
docs/: data-architecture.md
scripts/: build_backend.ps1  deploy.ps1  setup_server.ps1
scripts/server/: nginx-overachiever.conf  overachiever.env.example
src/: config.rs  db.rs  icon_cache.rs  main.rs  models.rs  steam_api.rs
src/app/: mod.rs  state.rs
src/app/panels/: top.rs  (+2 more)
(+57 files in other folders)
