[package]
name = "overachiever-desktop"
version = "0.3.4"
edition = "2021"

[[bin]]
name = "overachiever"
path = "src/main.rs"

[dependencies]
overachiever-core = { path = "../core", features = ["ui"] }

eframe = { version = "0.33.3", features = ["default_fonts"] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders", "http", "image"] }
egui_plot = "0.34.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rusqlite = { version = "0.38", features = ["bundled"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "blocking", "native-tls-no-alpn"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
egui-phosphor = "0.11.0"
toml = "0.9"
open = "5"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
base64 = "0.22"
directories = "6.0"
zip = "2.2"

# Windows registry for Steam path detection
winreg = "0.55"

# VDF parser for Steam config files
keyvalues-parser = "0.2"

# WebSocket client for hybrid/remote modes
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Headless Chrome for HLTB scraping
headless_chrome = "1"

[build-dependencies]
winresource = "0.1"
chrono = "0.4"
